# Physics-Aware-Optical-Imaging-Simulation-and-Reconstruction-under-Noise

./: README.md  bootstrap.py  pyproject.toml
experiments/: cnn_vs_wiener.py  failure_modes.py  resolution_vs_na.py  run_exp.py  snr_sweep.py
src/optical_imaging/: cnn.py  config.py  dataset.py  forward_model.py  metrics.py  noise.py  plot_utils.py  psf.py  reconstruction.py
src/optical_imaging.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_forward_model.py  test_metrics.py  test_noise.py  test_psf.py  test_reconstruction.py
