[project]
name = "optical-imaging"
version = "0.1.0"
description = "Physics-aware optical imaging simulation"
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "torch",
    "torchvision",
    "scikit-image",
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
